<resources>
    <string name="app_name">Top Quizz</string>
    <string name="app_settings">Paramètres</string>
    <string name="themes">Mes Thèmes</string>
    <string name="app_logout">Déconnexion</string>
    <string name="add_friends">Ajouter Amis</string>
    <string name="findQuizz">Chercher un Quizz</string>
    <string name="title_activity_game_end">GameEnd</string>
    <string name="title_activity_end_game">EndGame</string>
    <string name="title_activity_base_page">BasePage</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_chat">Chat</string>
    <string name="action_findQuizz">Trouver un quizz</string>
    <string name="action_findFriends">Trouver un ami</string>
    <string name="action_friends">Mes amis</string>
    <string name="action_evalMode">Module d\'évaluation</string>
    <string name="action_createEval">Créer une évaluation</string>
</resources>
