<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
    <item android:title="Collaboration">
        <menu>
            <item
                android:id="@+id/friends"
                android:title="Mes amis" />
            <!-- android:icon="@drawable/ic_menu_gallery" -->

            <item
                android:id="@+id/findFriend"
                android:title="@string/action_findFriends" />
            <!-- android:icon="@drawable/ic_menu_slideshow" -->
            <item
                android:id="@+id/findQuiz"
                android:title="@string/action_findQuizz" />
            <!-- android:icon="@drawable/ic_menu_camera" -->
            <item
                android:id="@+id/evalMode"
                android:title="@string/action_evalMode" />
            <!-- android:icon="@drawable/ic_menu_manage" -->
            <item
                android:id="@+id/chat"
                android:title="@string/action_chat" />
            <!-- android:icon="@drawable/ic_menu_manage" -->
            <item
                android:id="@+id/createEvaluation"
                android:title="@string/action_createEval" />
        </menu>
    </item>
</group>
    <group >
        <item android:title="Navigation">
            <menu >
                <item
                    android:id="@+id/home"
                    android:title="Accueil" />
                <item android:title="Déconnexion"
                    android:id="@+id/logout" />
            </menu>
        </item>
    </group>
</menu>